fixed morphingcollapse and added electron-promise-ipc

--- a/src/renderer/style/main.scss
+++ b/src/renderer/style/main.scss
@@ -77,3 +77,8 @@ body {
     transition: height 150ms linear;
     position: relative;
 }
+
+.gutter {
+  background-image: unset !important;
+  background-color: unset !important;
+}
